NetLogExporter: handle network service crashes

Bug: 892645
Change-Id: I53f9def5f23d45346b060e0cbb8138e6616b07ac
Reviewed-on: https://chromium-review.googlesource.com/c/1283838
Reviewed-by: Eric Roman <eroman@chromium.org>
Reviewed-by: John Abd-El-Malek <jam@chromium.org>
Commit-Queue: Maks Orlovich <morlovich@chromium.org>
Cr-Commit-Position: refs/heads/master@{#600213}